<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".operaciones">

    <EditText
        android:id="@+id/num1"
        android:layout_width="0dp"
        android:layout_height="51dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/numero1"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/num2"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/numero2"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/num1" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="186dp"
        android:layout_height="130dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/num2">

        <RadioButton
            android:id="@+id/rbsuma"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="Sumar"
            android:text="@string/suma" />

        <RadioButton
            android:id="@+id/rbresta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="Resta"
            android:text="@string/resta" />

        <RadioButton
            android:id="@+id/rbmulti"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="Multiplicar"
            android:text="@string/multi" />

        <RadioButton
            android:id="@+id/rbdivision"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="Dividir"
            android:text="@string/divide" />
    </RadioGroup>

    <TextView
        android:id="@+id/resultado"
        android:layout_width="155dp"
        android:layout_height="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.726"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />
</androidx.constraintlayout.widget.ConstraintLayout>